Documentation edits made through Mintlify web editor

--- a/app-builder/builder/components/products.mdx
+++ b/app-builder/builder/components/products.mdx
@@ -124,7 +124,7 @@ icon: "circle-user"
     - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần sản phẩm tại 
 <Frame caption="">
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image399_c91bdd8c58.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -147,7 +147,7 @@ icon: "circle-user"
     - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần sản phẩm tại 
 <Frame caption="">
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image400_9c47270566.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -157,7 +157,7 @@ icon: "circle-user"
     - Người dùng có thể chọn liên kết để khi click vào phụ đề, ứng dụng sẽ chuyển hướng đến liên kết đó tại 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image401_9de4d55fb6.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -170,7 +170,7 @@ icon: "circle-user"
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image402_4f2e7ad932.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -181,7 +181,7 @@ icon: "circle-user"
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image403_421708eda5.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -192,7 +192,7 @@ icon: "circle-user"
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image404_17efdb943a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -204,7 +204,7 @@ icon: "circle-user"
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image405_df41bd4c2e.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -215,7 +215,18 @@ icon: "circle-user"
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image406_c875147452.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
+- Người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút
+
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image407_7556975207.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -226,7 +237,7 @@ icon: "circle-user"
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image408_90526fdfc8.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -240,7 +251,7 @@ icon: "circle-user"
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image409_1b601c1b0f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -251,7 +262,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image410_9d274f3787.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -263,7 +274,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image411_a458cdf131.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -274,7 +285,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image412_9eecdab0bb.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -288,7 +299,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image413_36af3cc460.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -299,7 +310,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image414_9061955df5.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -315,7 +326,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image416_02d2d611ee.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -326,7 +337,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image417_5bdda8729c.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -337,7 +348,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image418_b30412d3ce.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -349,7 +360,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image419_e4d7197065.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -360,17 +371,28 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image420_654c1c9417.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
+- Người dùng có thể điều chỉnh riêng lề trên và lề dưới bằng cách nhấn vào nút
+
+<Frame caption>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image421_84364c4cbc.png"
+    alt="Screenshot of a deployment confirmation message that says All checks have passed."
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
+
   - **Chiều cao**
     - Người dùng có thể chọn hoặc tăng/giảm chiều cao của các thẻ sản phẩm tại 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image422_4fd16895e3.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -381,7 +403,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image423_4c78f6c067.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -395,18 +417,18 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image424_7817bfcf0c.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
   />
 </Frame>
 
-hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút
+hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image425_6311c325ed.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -418,7 +440,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image426_3939a22152.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -429,7 +451,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image427_6b9ffe48dd.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -443,7 +465,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image428_7912e6647b.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -454,7 +476,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image429_599cabfb2f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -482,7 +504,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
     - Người dùng chọn hiển thị giá giảm theo phần trăm hay giá gốc 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image430_b0c4318f3e.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -494,7 +516,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
     - Người dùng chọn không hiển thị nhãn hoặc chọn hiển thị nhãn flashsale, bán chạy, mới nhất.
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image430_b0c4318f3e.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -516,7 +538,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 Người dùng có thể chọn chuyển đổi hiển thị giỏ hàng giữa icon hoặc button 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image432_5207e48ac5.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
