--- a/app-builder/builder/features/minigame.mdx
+++ b/app-builder/builder/features/minigame.mdx
@@ -166,7 +166,7 @@ Chọn màu viền vòng quay bằng cách nhấn ô vuông sau đó chọn màu
 Chọn màu nút quay bằng cách nhấn ô vuông sau đó chọn màu
 <Frame caption="">
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image313_a6f6b9873b.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
