Documentation edits made through Mintlify web editor

--- a/app-builder/builder/components/cta.mdx
+++ b/app-builder/builder/components/cta.mdx
@@ -24,7 +24,7 @@ icon: "circle-user"
   - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần CTA tại 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image433_12e2bfd0ff.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -40,7 +40,7 @@ icon: "circle-user"
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image434_b5f7f22a67.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -54,7 +54,7 @@ icon: "circle-user"
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image435_777d9af5df.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -65,7 +65,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image436_3a48593d9d.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -77,7 +77,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image437_a2a3a2680b.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -88,7 +88,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image438_9b2faa5aab.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -102,7 +102,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image439_abf274f4d4.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -113,7 +113,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image440_76a47d9691.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
