--- a/app-builder/builder/components/news.mdx
+++ b/app-builder/builder/components/news.mdx
@@ -112,7 +112,7 @@ icon: "circle-user"
     - Người dùng có thể điều chỉnh kích thước và màu sắc cho tiêu đề của phần tin tức tại 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image443_82dcf53949.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -124,7 +124,7 @@ icon: "circle-user"
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image444_021ace5b4d.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -135,7 +135,7 @@ icon: "circle-user"
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image445_0b1a3ebda6.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -146,7 +146,7 @@ icon: "circle-user"
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image446_a30963897f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -158,7 +158,7 @@ icon: "circle-user"
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image447_066b2e1ea1.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -169,7 +169,7 @@ icon: "circle-user"
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image448_bdce31ca2f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -180,7 +180,7 @@ icon: "circle-user"
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image449_1fcc3d41ce.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -190,7 +190,7 @@ icon: "circle-user"
     - Người dùng có thể nhập hoặc tăng/giảm chiều cao của thẻ tin tức tại 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image450_d42d44b2b5.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -201,7 +201,7 @@ icon: "circle-user"
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image451_d78e86dc01.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -215,7 +215,7 @@ icon: "circle-user"
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image452_2410114bc7.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -226,7 +226,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image453_178f9a27ee.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -238,7 +238,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image454_39e29c2aa1.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -249,7 +249,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image455_6e90a7a18a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -263,7 +263,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image456_e8b8e71e0f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -274,7 +274,7 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 
 <Frame caption>
   <img
-    src=""
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image457_4607d954b7.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
@@ -289,90 +289,6 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
 <Frame caption="Danh mục  ">
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image72_ad00d88a1b.png"
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
-
-- **Hình ảnh danh mục**
-  - **Kích thước:**
-    - Người dùng có thể nhập hoặc tăng/giảm chung kích thước của các hình ảnh trong từng thẻ tại
-
-<Frame caption>
-  <img
-    src=""
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
-
-- **Bo góc**
-  - Người dùng có thể nhập hoặc tăng/giảm chung độ bo góc của 4 góc của các ảnh tại ô nhập
-
-<Frame caption>
-  <img
-    src=""
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
-
-hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách nhấn nút
-
-<Frame caption>
-  <img
-    src=""
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
-
-- **Viền**
-  - Người dùng có thể nhập hoặc tăng/giảm chung độ lớn viền của các ảnh tại ô nhập
-
-<Frame caption>
-  <img
-    src=""
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
-
-- Chọn màu cho viền bằng cách nhấn ô vuông sau đó chọn màu
-
-<Frame caption>
-  <img
-    src=""
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
-
-- Chuyển đổi qua lại giữa 2 trạng thái có viền và không viền bằng cách nhấn nút <Icon icon="eye" color="#cfcfcf" size={15} />
-- Xóa viền bằng cách nhấn nút <Icon icon="minus" color="#cfcfcf" size={15} />
-- **Đổ bóng**
-  - Người dùng có thể chọn độ lớn đổ bóng của các ảnh tại ô
-
-<Frame caption>
-  <img
-    src=""
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
-
-- Chọn màu cho đổ bóng bằng cách nhấn ô vuông sau đó chọn màu
-
-<Frame caption>
-  <img
-    src=""
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
     style={{ borderRadius:"0.5rem" }}
     title=""
