--- a/app-builder/builder/components/products.mdx
+++ b/app-builder/builder/components/products.mdx
@@ -490,16 +490,8 @@ hoặc điều chỉnh riêng lẻ độ bo góc của từng góc bằng cách 
   - **Hiển thị danh mục:**
     - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái có danh mục và không có danh mục
   - **Hiển thị giá tiền:**
-    - Người dùng chọn không hiển thị giá, giá cơ bản, giá khuyến mãi hoặc tất cả tại
+    - Người dùng nhấn nút <Icon icon="toggle-large-on" color="#0a06e4" size={15} /> để chuyển đổi qua lại giữa 2 trạng thái hiển thị giá tiền và không hiển thị giá tiền
 
-<Frame caption>
-  <img
-    src=""
-    alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
-    title=""
-  />
-</Frame>
   - **Hiển thị giá giảm:**
     - Người dùng chọn hiển thị giá giảm theo phần trăm hay giá gốc 
 <Frame caption>
