--- a/app-builder/builder/components/support.mdx
+++ b/app-builder/builder/components/support.mdx
@@ -109,7 +109,7 @@ icon: "circle-user"
 
     <Frame caption>
       <img
-        src=""
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image458_d722b5c300.png"
         alt=""
         style={{ borderRadius:"0.5rem" }}
         title=""
@@ -122,7 +122,7 @@ icon: "circle-user"
 
     <Frame caption>
       <img
-        src=""
+        src="https://aimini-upload.sgp1.digitaloceanspaces.com/image459_97e5efd0a0.png"
         alt=""
         style={{ borderRadius:"0.5rem" }}
         title=""
